@@ -46,9 +46,13 @@
 #  define strcasecmp	g_strcasecmp
 # endif
 
+# define snprintf	g_snprintf
+# define vsnprintf	g_vsnprintf
+
 #else
 
 # include <stdlib.h>
+# include <stdarg.h>
 
 # define FREE(x)		if(x) {free(x); x=NULL;}
 
@@ -62,6 +66,11 @@ void y_strfreev(char ** vector);
 
 int strncasecmp(const char * s1, const char * s2, size_t n);
 int strcasecmp(const char * s1, const char * s2);
+
+char * strdup(const char *s);
+
+int snprintf(char *str, size_t size, const char *format, ...);
+int vsnprintf(char *str, size_t size, const char *format, va_list ap);
 
 #endif
 
